--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -25,7 +25,7 @@
   	year 			= 2004,
 }
 
-@Misc{demeyder:statistiek,
+@Misc{demeyer:statistiek,
   	author 			= {De Meyer, H.},
   	title 			= {Waarschijnlijkheidsrekening en statistiek},
   	howpublished 	= {Course text},
@@ -73,7 +73,7 @@
 }
 
 @Misc{philips:beeldverwerking,
-  	author 			= {Phillips, W.},
+  	author 			= {Philips, W.},
   	title 			= {Beeldverwerking},
   	howpublished 	= {Course text},
   	institution 	= {Ghent University},
@@ -293,4 +293,14 @@
 	journal		= {IEEE Signal Processing Letters},
 	volume		= 3,
 	number		= 8,
+}
+
+@Article{stricker:fuzzy_regions_for_image_indexing,
+	author		= {Stricker, M. and Dimai, A.},
+	title		= {Spectral Covariance and Fuzzy Regions for Image Indexing},
+	pages		= {66-73},
+	year		= 1997,
+	journal		= {Machine Vision and Applications},
+	volume		= 10,
+	number		= 2,
 }
