--- a/Thesis/beeldverwerking.tex
+++ b/Thesis/beeldverwerking.tex
@@ -30,84 +30,96 @@ door een drietal. Men noemt de componenten van zo'n drietal respectievelijk
 correspondeert met de kleurtint, terwijl de overige componenten de saturatie
 en de helderheid aangeven. Men kan een kleur $(r,g,b) \in [0,1]^3$ uit het RGB 
 model als volgt omzetten naar een kleur $(h,s,v) \in [0,1]^3$ in het HSV-model: 
-$$
-\begin{array}{rcl}
-h' & = & \left\{ \begin{array}{ll}
-60 \cdot \frac{g - b}{\max \{r,g,b\} - \min \{r,g,b\}}\quad & \textrm{ als } \max \{r,g,b\} = r \\[4pt]
-60 \cdot \frac{b - r}{\max \{r,g,b\} - \min \{r,g,b\}} + 120\quad & \textrm{ als } \max \{r,g,b\} = g \\[4pt]
-60 \cdot \frac{r - g}{\max \{r,g,b\} - \min \{r,g,b\}} + 240\quad & \textrm{ als } \max \{r,g,b\} = b
-\end{array} \right. \vspace{6pt} \\
-h & = & \left\{ \begin{array}{ll} 
-\frac{h' \bmod 360}{360} & \textrm{ als } h' \bmod 360 \geq 0 \\[4pt] 
-\frac{360 - (h' \bmod 360)}{360} & \textrm{ als } h' \bmod 360 < 0 
-\end{array} \right. \vspace{6pt} \\
-s & = & \frac{\max \{r,g,b\} - \min \{r,g,b\}}{\max \{r,g,b\}} \\[6pt] 
-v & = & \max \{r,g,b\}
-\end{array}
-$$ Als $s=0$ dan is $h$ niet gedefinieerd. Dat is logisch vermits we dan te 
+\begin{align*}
+h' & = \begin{cases}
+60 \cdot \frac{g - b}{\max \{r,g,b\} - \min \{r,g,b\}} & \textrm{als } \max \{r,g,b\} = r \\[2pt]
+60 \cdot \frac{b - r}{\max \{r,g,b\} - \min \{r,g,b\}} + 120 & \textrm{als } \max \{r,g,b\} = g \\[2pt]
+60 \cdot \frac{r - g}{\max \{r,g,b\} - \min \{r,g,b\}} + 240 & \textrm{als } \max \{r,g,b\} = b
+\end{cases} \\[2pt]
+h & = \begin{cases}
+\frac{h' \bmod 360}{360} & \textrm{als } h' \bmod 360 \geq 0 \\[2pt] 
+\frac{360 - (h' \bmod 360)}{360} & \textrm{als } h' \bmod 360 < 0 
+\end{cases} \\[2pt]
+s & = \frac{\max \{r,g,b\} - \min \{r,g,b\}}{\max \{r,g,b\}} \\ %[6pt] 
+v & = \max \{r,g,b\}
+\end{align*}
+Als $s=0$ dan is $h$ niet gedefinieerd. Dat is logisch vermits we dan te 
 maken hebben met een grijswaarde. Indien $v=0$ dan zijn $s$ en $h$ niet gedefinieerd. We 
 hebben het in dat geval dan ook over puur zwart, waarvoor er geen kleurtint of 
 saturatie kan gespecificeerd worden. In de praktische implementatie geven we 
 niet gedefinieerde componenten de waarde $0$.
 
 Een kleur in het Irb-model bestaat uit een intensiteit en een genormaliseerde $r$ en $b$ 
-\cite{ohta:color_info_for_region_segm}: $$ i = \frac{r+g+b}{3} \qquad r' = 
-\frac{r}{r+g+b} \qquad b' = \frac{b}{r+g+b} $$ met $r,g,b \in [0,1]$ 
-de co\"ordinaten van de beschouwde kleur in het RGB-model. 
+\cite{ohta:color_info_for_region_segm}:
+\begin{displaymath}
+ i = \frac{r+g+b}{3} \qquad r' = 
+\frac{r}{r+g+b} \qquad b' = \frac{b}{r+g+b}
+\end{displaymath}
+met $r,g,b \in [0,1]$ de co\"ordinaten van de beschouwde kleur in het RGB-model. 
 
 Het I1I2I3-model, dat werd voorgesteld door Ohta 
 \cite{ohta:color_info_for_region_segm}, is een \emph{opponent color space}. 
 We zetten een kleur $(r,g,b) \in 
-[0,1]^3$ uit het RGB-model als volgt om: $$
+[0,1]^3$ uit het RGB-model als volgt om:
+\begin{displaymath}
 %\begin{array}{rcl}
 i_1 = \frac{r+g+b}{3} \qquad i_2 = \frac{r-b}{2} \qquad i_3 = \frac{2 \cdot g - 
 r - b}{4}
 %\end{array}
-$$ De eerste component is achromatisch (\emph{white-black}), terwijl de overige 
+\end{displaymath}
+De eerste component is achromatisch (\emph{white-black}), terwijl de overige 
 twee chromatisch zijn (\emph{red-green} en \emph{yellow-blue}).
 We gebruiken hier, zoals in \cite{wang:cbir_using_daubechies_wavelets}, een 
-genormaliseerde vorm van dit model: $$
+genormaliseerde vorm van dit model:
+\begin{displaymath}
 %\begin{array}{rcl}
 c_1 = \frac{r+g+b}{3} \qquad c_2 = \frac{r + (1 - b)}{2} \qquad c_3 = \frac{r + 
 2 \cdot (1 - g) + b}{4}
 %\end{array}
-$$ 
+\end{displaymath}
 
 In het XYZ-model wordt een kleur voorgesteld door de volgende drie componenten: 
-$$
-\begin{array}{rcl}
-x & = & 0.4124 \cdot r + 0.3576 \cdot g + 0.1805 \cdot b \\
-y & = & 0.2126 \cdot r + 0.7152 \cdot g + 0.0722 \cdot b \\
-z & = & 0.0193 \cdot r + 0.1192 \cdot g + 0.9505 \cdot b
-\end{array}
-$$ met $(r,g,b) \in [0,1]^3$ de vector van de kleur in het RGB-model. Hierbij 
+\begin{align*}
+x & = 0.4124 \cdot r + 0.3576 \cdot g + 0.1805 \cdot b \\
+y & = 0.2126 \cdot r + 0.7152 \cdot g + 0.0722 \cdot b \\
+z & = 0.0193 \cdot r + 0.1192 \cdot g + 0.9505 \cdot b
+\end{align*}
+met $(r,g,b) \in [0,1]^3$ de vector van de kleur in het RGB-model. Hierbij 
 is $y$ evenredig met de luminantie van de kleur in kwestie. 
 
 De eerste component van een kleur in het Yxy-model is gelijk aan de $y$ 
 component van die kleur in het XYZ-model. De overige twee componenten berekenen 
-we als volgt: $$ x' = \frac{x}{x+y+z} \qquad y' = \frac{y}{x+y+z} $$ 
+we als volgt:
+\begin{displaymath}
+x' = \frac{x}{x+y+z} \qquad y' = \frac{y}{x+y+z}
+\end{displaymath}
 
 Een kleurruimte op basis van het L*a*b*-model is \emph{perceptueel uniform} 
 \cite{sharma:digital_color_imaging}. Dat wil zeggen dat, in een dergelijke 
 ruimte, de Euclidische afstand een goede maat is voor het waargenomen verschil 
 tussen twee kleuren. De co\"ordinaten $(l,a,b)$ van een kleur in het 
 L*a*b*-model kunnen als volgt benaderd worden 
-\cite{debaets:similariteitsmaten_voor_kleurbeelden, philips:beeldverwerking}: $$
-\begin{array}{rcl}
-l & = & 116 \cdot f(\frac{100 \cdot y}{255 \cdot y_0}) - 16 \\[5pt] a & = & 500 \cdot 
-\left(f(\frac{100 \cdot x}{255 \cdot x_0}) - f(\frac{100 \cdot y}{255 \cdot y_0})\right) \\[5pt] b & = & 200 \cdot 
-\left(f(\frac{100 \cdot y}{255 \cdot y_0}) - f(\frac{100 \cdot z}{255 \cdot z_0})\right)
-\end{array}
-$$ met $$
-\begin{array}{rcll}
-f(t) & = & t^\frac{1}{3} & \textrm{als } t > 0.008856 \\ & = & 7.787 \cdot t + 
-\frac{16}{116} & \textrm{anders}
-\end{array}
-$$ voor elke re\"ele $t$. Hierbij zijn $x_0$, $y_0$ en $z_0$ de
+\cite{debaets:similariteitsmaten_voor_kleurbeelden, philips:beeldverwerking}:
+\begin{align*}
+l & = 116 \cdot f({\scriptstyle\frac{100 \cdot y}{255 \cdot y_0}}) - 16 \\[2pt] 
+a & = 500 \cdot \left(f({\scriptstyle\frac{\scriptstyle 100 \cdot x}{\scriptstyle 255 \cdot x_0}}) - f({\scriptstyle\frac{\scriptstyle 100 \cdot y}{\scriptstyle 255 \cdot y_0}})\right) \\[2pt] 
+b & = 200 \cdot \left(f({\scriptstyle\frac{\scriptstyle 100 \cdot y}{\scriptstyle 255 \cdot y_0}}) - f({\scriptstyle\frac{\scriptstyle 100 \cdot z}{\scriptstyle 255 \cdot z_0}})\right)
+\end{align*}
+met
+\begin{displaymath}
+f(t) = \begin{cases} 
+t^\frac{1}{3} & \textrm{als } t > 0.008856 \\ 
+7.787 \cdot t + \frac{16}{116} & \textrm{anders}
+\end{cases}
+\end{displaymath}
+voor elke re\"ele $t$. Hierbij zijn $x_0$, $y_0$ en $z_0$ de
 XYZ-co\"ordinaten van een wit referentiepunt. We gebruiken hier 
 $255 \cdot (x_0,y_0,z_0)=(95.05,100,108.9)$.
-We kunnen dan als volgt normaliseren: $$ l' = \frac{l}{100} \qquad a' = \frac{120 + 
-\max\{\min\{a,120\},-120\}}{240} \qquad b' = \frac{120 + \max\{\min\{b,120\},-120\}}{240} $$
+We kunnen dan als volgt normaliseren:
+\begin{displaymath}
+l' = \frac{l}{100} \qquad a' = \frac{120 + 
+\max\{\min\{a,120\},-120\}}{240} \qquad b' = \frac{120 + \max\{\min\{b,120\},-120\}}{240}
+\end{displaymath}
 
 
 \subsection{Kleurbeelden}
@@ -125,12 +137,12 @@ $\mathbb{N}^2$ naar $[0,1]^n$ zijn.
 Om geen rekening te moeten houden met ``randgevallen'', beschouwen voor elk beeld $b$ ook een
 met nullen uitgebreide versie $\mathring{b}$. Voor een beeld $b$ van $M$ bij $N$ beeldpunten
 defini\"eren we de $\mathbb{Z}^2 - [0,1]^n$ afbeelding $\mathring{b}$ als volgt:
-$$
-\mathring{b}(x,y) = \left\{ \begin{array}{ll}
+\begin{displaymath}
+\mathring{b}(x,y) = \begin{cases}
 b(x,y) & \textrm{als } 0 \le x < M \textrm{ en } 0 \le y < N \\
 (0,0,\ldots,0) & \textrm{anders}
-\end{array} \right.
-$$
+\end{cases}
+\end{displaymath}
 
 \section{Kleurkwantisatie}
 \label{sectie:kleurkwantisatie}
@@ -152,7 +164,7 @@ geavanceerde technieken proberen een palet te gebruiken dat optimaal is voor de
 beschouwde beelden.
 
 Wiskundig kunnen we kleurkwantisatie modelleren aan de hand van twee functies: 
-$bin$ en $kleur$. De eerste functie associeert met elke kleur $c$, uit de 
+$bin$ en $col$. De eerste functie associeert met elke kleur $c$, uit de 
 kleurruimte $C$, het nummer van de corresponderende bin. Met behulp van de 
 tweede functie kan men dan de kleur van die bin bepalen.
 
@@ -160,26 +172,35 @@ tweede functie kan men dan de kleur van die bin bepalen.
 
 Bij \emph{uniforme kwantisatie} wordt elke kleurcomponent uniform verdeeld in een 
 aantal intervallen. Als we zorgen dat $C=[0,1]^l$, $l > 0$, dan kunnen we de 
-volgende definitie voor $bin$ gebruiken: $$
+volgende definitie voor $bin$ gebruiken:
+\begin{displaymath}
 \begin{array}{lrcll}
 bin: & C & \to & \{1,2,...,N\}\\[5pt] & (c_1,c_2,\ldots,c_l) & \mapsto & \left[ 
 \displaystyle\sum_{i=1}^l \left( \prod_{j=1}^{i-1} N_j \right) \mathit{fl}(c_i, N_i) \right] 
 + 1, & \forall (c_1,c_2,\ldots,c_l) \in C
 \end{array}
-$$ met $N_j$ het aantal bins voor de $j$-de component, $N$ het totale aantal 
-bins ($N=N_1 \cdot N_2 \cdot \ldots \cdot N_l$) en $$
-\begin{array}{rcll}
-\mathit{fl}(x,n) & = & \lfloor x \cdot n \rfloor & \textrm{als } x < 1 \\ & = & 
+\end{displaymath}
+met $N_j$ het aantal bins voor de $j$-de component, $N$ het totale aantal 
+bins ($N=N_1 \cdot N_2 \cdot \ldots \cdot N_l$) en 
+\begin{displaymath}
+\mathit{fl}(x,n) = \begin{cases}
+\lfloor x \cdot n \rfloor & \textrm{als } x < 1 \\ 
 n - 1 & \textrm{als } x = 1
-\end{array}
-$$ voor alle $x \in [0,1]$ en $n \in \mathbb{N}$. De middelste waarden van de 
-intervallen doen hierbij dienst als componenten van de kleur van een bin: $$
+\end{cases}
+\end{displaymath}
+voor alle $x \in [0,1]$ en $n \in \mathbb{N}$. De middelste waarden van de 
+intervallen doen hierbij dienst als componenten van de kleur van een bin:
+\begin{displaymath}
 \begin{array}{lrcll}
-kleur: & \{1,2,\ldots,N\} & \to & C \\ & n & \mapsto & (kleur_1(n), kleur_2(n), 
-\dots, kleur_l(n)), & \forall n \in \{1,2,\ldots,N\}
+col: & \{1,2,\ldots,N\} & \to & C \\ & n & \mapsto & (col_1(n), col_2(n), 
+\dots, col_l(n)), & \forall n \in \{1,2,\ldots,N\}
 \end{array}
-$$ waarbij $$ kleur_i(n) = \frac{n}{\prod_{j=1}^i N_j} + \frac{1}{2 \cdot N_i} 
-$$ voor alle $n \in \{1,2,\ldots,N\}$ en $i \in \{1,2,\ldots,l\}$.
+\end{displaymath}
+waarbij 
+\begin{displaymath}
+col_i(n) = \frac{n}{\prod_{j=1}^i N_j} + \frac{1}{2 \cdot N_i}
+\end{displaymath} 
+voor alle $n \in \{1,2,\ldots,N\}$ en $i \in \{1,2,\ldots,l\}$.
 
 Bij image retrieval is doorgaans vooral de kleurtint op zich belangrijk. Door
 minder belang te hechten aan de luminantie kan de prestatie zelfs verbeteren,
@@ -448,9 +469,9 @@ vervangen door een nieuwe waarde die afhangt van de originele waarde $b(x,y)$ va
 van naburige beeldpunten. In het geval van een \emph{lineair filter} is die nieuwe waarde een lineaire combinatie 
 van de oude waarden. Het beeld $b'$ dat we bekomen door $b$ lineair te filteren, wordt gegeven door
 de volgende correlatie \cite{philips:beeldverwerking}:
-$$
+\begin{displaymath}
 b'(x,y) = \sum_{(k,l) \in \Omega_m} \mathring{b}(x+k,y+l) \cdot m(k,l)
-$$
+\end{displaymath}
 met $m$ een $\mathbb{N}^2 - \mathbb{R}$ afbeelding en $\Omega_m = \{ (k,l) \in \mathbb{N}^2 \mid m(k,l) \ne 0 \}$. 
 De functie $m$ wordt het \emph{filtermasker} genoemd.
 
@@ -459,11 +480,11 @@ $m_{bin}$ van dat filter geldt $m_{bin}(-1,-1)=m_{bin}(-1,1)=m_{bin}(1,-1)=m_{bi
 $m_{bin}(-1,0)=m_{bin}(0,-1)=m_{bin}(1,0)=m_{bin}(0,1)=1/8$, $m_{bin}(0,0)=1/4$ en 
 $m_{bin}(k,l)=0$ voor de overige $(k,l)$. Als we veronderstellen dat $m_{bin}(k,l)=0$ voor de 
 posities $(k,l)$ die niet weergegeven worden, dan kunnen we dat masker noteren als een matrix:
-$$
+\begin{displaymath}
 \frac{1}{16}\left[ \begin{array}{ccc} 1 & 2 & 1\\ 2 & 4 & 2\\ 1 & 2 & 1 \end{array} \right]
 = \frac{1}{16}\left[ \begin{array}{c} 1\\ 2\\ 1 \end{array} \right] \cdot 
 \left[ \begin{array}{ccc} 1 & 2 & 1 \end{array} \right]
-$$
+\end{displaymath}
 Zoals ge\"illustreerd in figuur~\ref{fig:indische_ruizig_en_binom}, kan een binomiaalfilter gebruikt worden om ruis te onderdrukken.
 
 \begin{figure}[tb]
@@ -484,41 +505,41 @@ Zoals ge\"illustreerd in figuur~\ref{fig:indische_ruizig_en_binom}, kan een bino
 \section{Eenvoudige randdetectie}
 \label{sectie:randdetectie}
 
-Beeldranden in een 2-dimensionaal beeld $b$ zijn plaatsen waar de luminantiecomponent $l(x,y)$ van $b(x,y)$ 
-sterk varieert als functie van $x$ en/of $y$. Op die plaatsen zullen de partieel afgeleiden $D_1 l(x,y)$ en 
-$D_2 l(x,y)$ dus groot zijn. Bijgevolg zal de \emph{gradi\"ent} $\nabla l$ daar ook groot zijn. We kunnen 
+Beeldranden in een 2-dimensionaal beeld $b$ zijn plaatsen waar de luminantiecomponent $lum(x,y)$ van $b(x,y)$ 
+sterk varieert als functie van $x$ en/of $y$. Op die plaatsen zullen de partieel afgeleiden $D_1 lum(x,y)$ en 
+$D_2 lum(x,y)$ dus groot zijn. Bijgevolg zal de \emph{gradi\"ent} $\nabla lum$ daar ook groot zijn. We kunnen 
 dus de volgende formule gebruiken om randen te detecteren in $b$: 
-$$
-|\nabla l(x,y)| / \sqrt{2} = \sqrt{(D_1 l(x,y))^2 + (D_2 l(x,y))^2} / \sqrt{2}
-$$ 
-met $l$ de $\mathbb{N}^2 - [0,1]$ functie die met elk beeldpunt $(x,y)$ de juiste luminantiecomponent associeert.
+\begin{displaymath}
+|\nabla lum(x,y)| / \sqrt{2} = \sqrt{(D_1 lum(x,y))^2 + (D_2 lum(x,y))^2} / \sqrt{2}
+\end{displaymath}
+met $lum$ de $\mathbb{N}^2 - [0,1]$ functie die met elk beeldpunt $(x,y)$ de juiste luminantiecomponent associeert.
 
-Doordat $l$ in de praktijk geen continue maar een discrete functie is, moeten we de partieel afgeleiden benaderen.
+Doordat $lum$ in de praktijk geen continue maar een discrete functie is, moeten we de partieel afgeleiden benaderen.
 De Taylorreeksontwikkeling van een $\mathbb{R} - \mathbb{R}$ functie $f$ rond $x$ geeft
-$$
+\begin{displaymath}
 f(x+h) = f(x) + h D f(x) + \frac{h^2}{2!} D^2 f(x) + \ldots
-$$
+\end{displaymath}
 en ook
-$$
+\begin{displaymath}
 f(x-h) = f(x) - h D f(x) + \frac{h^2}{2!} D^2 f(x) + \ldots
-$$
+\end{displaymath}
 zodat
-$$
+\begin{displaymath}
 \frac{f(x+h) - f(x-h)}{2h} \approx D f(x)
-$$
-Bijgevolg geldt $D_1 l(x,y) \approx (l(x+1,y) - l(x-1,y))/2$ en $D_2 l(x,y) \approx (l(x,y+1) - l(x,y-1))/2$. We
+\end{displaymath}
+Bijgevolg geldt $D_1 lum(x,y) \approx (lum(x+1,y) - lum(x-1,y))/2$ en $D_2 lum(x,y) \approx (lum(x,y+1) - lum(x,y-1))/2$. We
 kunnen de eerste en tweede partieel afgeleiden dus berekenen met behulp van lineaire filters met filtermaskers:
-$$
-D_1 l(x,y)\textrm{: }\quad \frac{1}{2} \left[ \begin{array}{ccc} -1 & 0 & 1 \end{array} \right] \qquad \textrm{ en } 
-\qquad D_2 l(x,y)\textrm{: }\quad \frac{1}{2} \left[ \begin{array}{c} -1 \\ 0 \\ 1 \end{array} \right]
-$$
+\begin{displaymath}
+D_1 lum(x,y)\textrm{: }\quad \frac{1}{2} \left[ \begin{array}{ccc} -1 & 0 & 1 \end{array} \right] \qquad \textrm{ en } 
+\qquad D_2 lum(x,y)\textrm{: }\quad \frac{1}{2} \left[ \begin{array}{c} -1 \\ 0 \\ 1 \end{array} \right]
+\end{displaymath}
 De \emph{Sobel-operator} is een variant hierop die minder ruisgevoelig is doordat er 
 extra ruisonderdrukking voorzien wordt via een binomiaalfilter loodrecht op de richting 
 van de parti\"ele afleiding:
-$$
-D_1 l(x,y)\textrm{: }\quad \frac{1}{8} \left[ \begin{array}{c} 1 \\ 2 \\ 1 \end{array} \right] \cdot \left[ \begin{array}{ccc} -1 & 0 & 1 \end{array} \right] \qquad \textrm{ en } 
-\qquad D_2 l(x,y)\textrm{: }\quad \frac{1}{8} \left[ \begin{array}{c} -1 \\ 0 \\ 1 \end{array} \right] \cdot \left[ \begin{array}{ccc} 1 & 2 & 1 \end{array} \right]
-$$
+\begin{displaymath}
+D_1 lum(x,y)\textrm{: }\quad \frac{1}{8} \left[ \begin{array}{c} 1 \\ 2 \\ 1 \end{array} \right] \cdot \left[ \begin{array}{ccc} -1 & 0 & 1 \end{array} \right] \qquad \textrm{ en } 
+\qquad D_2 lum(x,y)\textrm{: }\quad \frac{1}{8} \left[ \begin{array}{c} -1 \\ 0 \\ 1 \end{array} \right] \cdot \left[ \begin{array}{ccc} 1 & 2 & 1 \end{array} \right]
+\end{displaymath}
 Uit figuur~\ref{fig:randdetectie} blijkt echter dat beide technieken geen spectaculair verschillende 
 resultaten geven.
 
