--- a/Thesis/kleurgeb.tex
+++ b/Thesis/kleurgeb.tex
@@ -21,9 +21,9 @@ De waarde van het histogram voor een beeld $A$ in de kleur $c \in C'$ is dan gel
 het totaal aantal pixels in $A$ die tot bin $bin(c)$ behoren. Met andere woorden: het histogram 
 geeft de frequentieverdeling weer van de kleuren uit $C'$ in de gekwantiseerde versie van 
 $A$. We noteren de waarde in $c$ van het histogram van een beeld $A$ met $h_A(c)$: 
-$$ 
+\begin{displaymath}
 h_A(c) = \sum_{p \in P} \delta (bin(c) - bin(A(p))) 
-$$ 
+\end{displaymath} 
 waarbij $\delta$ de Diracfuntie is en $P$ het universum der beelpunten 
 voorstelt. De functie $bin$ is uiteraard de $C - \{1,2,\ldots,N\}$ afbeelding 
 uit \ref{sectie:kleurkwantisatie}, die met 
@@ -40,9 +40,9 @@ waarde van het histogram delen door het maximaal aantal pixels met dezelfde
 kleur. We hebben dus de volgende uitdrukking voor de lidmaatschapsgraad van de 
 kleur $c \in C$ in de vaagverzameling $H_A$ geassocieerd met het histogram 
 van beeld $A$: 
-$$
+\begin{displaymath}
 H_A(c) = \frac{\displaystyle h_A(c)}{\displaystyle \max_{c \in C'}(h_A(c))}
-$$ 
+\end{displaymath}
 Een dergelijke vaagverzameling noemen we een \emph{pseudo-vaag histogram}. 
 De kleur die het meest voorkomt heeft daarbij lidmaatschapsgraad $1$. Alle 
 andere kleuren hebben kleinere lidmaatschapsgraden. 
@@ -230,13 +230,15 @@ gebruik van het L*a*b* kleurmodel en beschouwen we een
 vaagverzameling voor elke kleur. Stel dat $lab$ de kleuren uit $C$ afbeeldt op de
 corresponderende niet-genormaliseerde L*a*b*-co\"ordinaten. De lidmaatschapsgraad van een 
 kleur $c' \in C$ in de vaagverzameling $\widetilde{C}_c$, die correspondeert met kleur $c \in C$, 
-defini\"eren we dan als volgt \cite{vertan:fuzzy_histograms}: $$
+defini\"eren we dan als volgt \cite{vertan:fuzzy_histograms}:
+\begin{displaymath}
 \widetilde{C}_c(c') =
-\left\{ \begin{array}{ll}
+\begin{cases}
 1 & \textrm{als } d'_{c,c'} = \frac{d \left( lab(c), lab(c') \right)}{2.3} \leq 1 \\ 
 \exp \frac{- \left( d'_{c,c'} - 1 \right)^2}{2 \cdot \lambda^2} & \textrm{anders}
-\end{array} \right.
-$$ met $d$ de Euclidische afstand en $\lambda$ een vrij te kiezen parameter. In 
+\end{cases}
+\end{displaymath} 
+met $d$ de Euclidische afstand en $\lambda$ een vrij te kiezen parameter. In 
 het geval van (niet-ge\-nor\-ma\-li\-seer\-de) L*a*b* komt de afstand $2.3$ namelijk 
 overeen met de zogenaamde 
 \emph{just noticeable difference} (JND) \cite{sharma:digital_color_imaging}. 
@@ -245,14 +247,15 @@ kunnen door de mens niet onderscheiden worden.
 
 Het eigenlijk vaaghistogram $\widetilde{H}_A$, voor een kleurbeeld $A$, defini\"eren we 
 dan als de unie van alle kleuren die voorkomen in $A$: 
-$$ \widetilde{H}_A = 
-\displaystyle\bigcup_{c \in C_A} \widetilde{C}_c
+\begin{displaymath} 
+\widetilde{H}_A = \displaystyle\bigcup_{c \in C_A} \widetilde{C}_c
 %\begin{array}{lrcl}
 %Vh_A: 	& C_A 	& \to 		& [0,1] \\[5pt]
 %		& c					& \mapsto	& \displaystyle\bigcup_{c \in C_A} VC_c,
 %\quad\forall c \in C_A
 %\end{array}
-$$ waarbij de verzameling $C_A \subseteq C$ bestaat uit de in $A$ voorkomende kleuren. Alle 
+\end{displaymath}
+waarbij de verzameling $C_A \subseteq C$ bestaat uit de in $A$ voorkomende kleuren. Alle 
 kleuren die (niet te onderscheiden zijn van kleuren die) voorkomen in het beeld 
 hebben dus lidmaatschapsgraad $1$. De overige kleuren hebben kleinere 
 lidmaatschapsgraden. 
@@ -589,13 +592,13 @@ andere plaats.
 Stel nu dat $(\mathcal{H}_A,\mathcal{H}_B) \in \{(H_A,H_B), (\widetilde{H}_A,\widetilde{H}_B)\}$.
 Er geldt dan
 $|\mathcal{H}_A|=|\mathcal{H}_B|$ en $|\mathcal{H}_{A}^c|=|\mathcal{H}_{B}^c|$, zodat
-$$
+\begin{displaymath}
 |\mathcal{H}_A \setminus \mathcal{H}_B|=|\mathcal{H}_A \cap \mathcal{H}_{B}^c|=|\mathcal{H}_A|=|\mathcal{H}_B|=|\mathcal{H}_B \cap \mathcal{H}_{A}^c|=|\mathcal{H}_B \setminus \mathcal{H}_A|
-$$ 
+\end{displaymath}
 en ook
-$$
+\begin{displaymath}
 |(\mathcal{H}_A  \setminus \mathcal{H}_B)^c|=|C'|-|\mathcal{H}_A \setminus \mathcal{H}_B|=|C'|-|\mathcal{H}_B \setminus \mathcal{H}_A|=|(\mathcal{H}_B  \setminus \mathcal{H}_A)^c|
-$$
+\end{displaymath}
 want voor een vaagverzameling $D$ in een universum $X$ is $|D^c|$ gelijk aan $|X|-|D|$ (zie \ref{sectie:beperken_rekentijd}). Bijgevolg geldt:
 $M_5(\mathcal{H}_A,\mathcal{H}_B)=M_{5c}(\mathcal{H}_A,\mathcal{H}_B)=M_{11}(\mathcal{H}_A,\mathcal{H}_B)=M_{11c}(\mathcal{H}_A,\mathcal{H}_B)=1$.
 Ook bij meer realistische beelden treden er valse positieven op. Zo bekomen 
@@ -705,27 +708,25 @@ door \emph{uitgebreide histogrammen} te beschouwen.
 %$\mathcal{H}_A \in \{H_A,\widetilde{H}_A\}$ geassocieerd met een beeld $A$ defini\"eren we
 %als volgt:
 Zij $A$ een beeld en $w_{A,c}$ een $P - \mathbb{R}$ afbeelding. Een functie van de vorm
-$$
+\begin{displaymath}
 \begin{array}{rrcll}
 \mathring{h}_A: 
  & C' & \to & \mathbb{R} \\
  & c  & \mapsto & \displaystyle\sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p), & 
  \forall c \in C'
 \end{array}
-$$ 
+\end{displaymath}
 met $\delta$ de Dirac functie, noemen we dan een uitgebreid histogram geassocieerd met $A$. 
 Voor $w_{A,c}(p)=\delta(bin(c)-bin(A(p)))$, $\forall p \in P$, vinden we:
-$$
-\begin{array}{r@{\quad=\quad}l}
+\begin{align*}
 \mathring{h}_A(c) 
- & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p) \\[2pt]
- & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot \delta (bin(c)-bin(A(p))) \\[2pt]
- & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot \delta (bin(c)-bin(c')) \\[2pt]
-% & \displaystyle \sum_{c' \in C'} \left( \begin{array}{c} \displaystyle \sum_{p \in P} \delta (bin(c')-bin(A(p))) \end{array} \right) \cdot \delta (bin(c)-bin(c')) \\[2pt]
- & \displaystyle \sum_{c' \in C'} h_A(c') \cdot \delta (bin(c)-bin(c')) \\[2pt]
- & h_A(c)
-\end{array}
-$$
+ &= \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p) \\
+ &= \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot \delta (bin(c)-bin(A(p))) \\
+ &= \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot \delta (bin(c)-bin(c')) \\
+% &= \displaystyle \sum_{c' \in C'} \left( \begin{array}{c} \displaystyle \sum_{p \in P} \delta (bin(c')-bin(A(p))) \end{array} \right) \cdot \delta (bin(c)-bin(c')) \\
+ &= \displaystyle \sum_{c' \in C'} h_A(c') \cdot \delta (bin(c)-bin(c')) \\
+ &= h_A(c)
+\end{align*}
 voor alle $c \in C'$. Het uitgebreid histogram $\mathring{h}_A$, geassocieerd met een beeld $A$, is 
 dus een meer algemene versie van het ``gewone'' histogram $h_A$. We noteren $\mathring{H}_A$ voor het 
 pseudo-vaag histogram op basis van $\mathring{h}_A$.
@@ -773,62 +774,75 @@ die bin. Het is bijgevolg zeer geschikt om
 \emph{smoothing} op toe te passen \cite{sural:perceptually_smooth_histogram}. De gladde versie van
 een SCT-histogram is dan een uitgebreid histogram waarbij bijvoorbeeld 
 $w_{A,c}(p)=s(bin(c),bin(A(p)))$, $\forall p \in P$, en
-$$
+\begin{displaymath}
 s(m,n)=
-\left\{ \begin{array}{ll}
+%\left\{ \begin{array}{ll}
+\begin{cases}
 \alpha^{|m-n|} & \textrm{als } m, n \le 16 \textrm{ en } |m-n| \le R_1 \\
 \beta^{\min\{|m-n|, (m+n) \bmod 272\}} & \textrm{als } m, n > 16 \textrm{ en } \min\{|m-n|, (m+n) \bmod 272\} \le R_2 \\ 
 0 & \textrm{anders}
-\end{array} \right.
-$$
+%\end{array} \right.
+\end{cases}
+\end{displaymath}
 voor alle $(m,n)$ uit $\mathbb{N}^2$. In \ref{sectie:kleurkwantisatie} hebben 
 we reeds vermeld dat SCT-kwantisatie eigenlijk een combinatie is van twee 
 uniforme kwantisaties: \'e\'en voor de grijstinten en een andere voor de 
 kleurtinten. Een SCT-histogram $h_A$ kan dus beschouwd 
 worden als de combinatie van een histogram voor grijstinten en een histogram 
 voor kleurtinten. 
-Bij het construeren van het uitgebreid SCT-histogram $h_A'$, met behulp van de bovenstaande 
+Bij het construeren van het uitgebreid SCT-histogram $\mathring{h}_A$, met behulp van de bovenstaande 
 definitie voor $w_{A,c}$, wordt op elk van de beide deelhistogrammen een 
 transformatie toegepast die te vergelijken is met het lineair filteren van
 een beeld (zie \ref{sectie:lineaire_filters}). 
 
-Zij $g$ de restrictie van $h_A \circ kleur$ tot
-$\{1,2,\ldots,16\}$. Dat wil zeggen dat $g$ de $\{1,2,\ldots,16\} - [0,1]$ afbeelding is die 
+Zij $g$ de restrictie van $h_A \circ col$ tot
+$\{1,2,\ldots,16\}$, met $col$ de functie die we in \ref{sectie:kleurkwantisatie} gedefinieerd 
+hebben. Dat wil zeggen dat $g$ de $\{1,2,\ldots,16\} - [0,1]$ afbeelding is die 
 gegeven wordt door:
-$g(k)=h_A(kleur(k)), \forall k \in \{1,2,\ldots,16\}$.
-%$g = \mathcal{H}_A \circ kleur$ en $\mathring{g}$ 
+$g(k)=h_A(col(k)), \forall k \in \{1,2,\ldots,16\}$.
+%$g = \mathcal{H}_A \circ col$ en $\mathring{g}$ 
 %de met nullen uitgebreide versie van $g$. 
 Indien $\mathring{g}$ de met nullen uitgebreide versie is van $g$ ($\mathring{g}(k)=g(k)$ voor
 alle $k \in \{1,2,\ldots,16\}$ en $\mathring{g}(k)=0$ voor alle andere $k$ uit $\mathbb{Z}$)
 en $c \in C'_{gr}=\{c \in C' \mid bin(c) \le 16\}$ (met
 andere woorden: $c$ is \'e\'en van de grijstinten) dan geldt:
-$$
-\begin{array}{r@{\quad=\quad}l}
+% $$
+% \begin{array}{r@{\quad=\quad}l}
+% \mathring{h}_A(c)
+%  & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p) \\[2pt]
+%  & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(A(p))) \\[2pt]
+%  & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(c')) \\[2pt]
+%  & \displaystyle\sum_{c' \in C'} h_A(c') \cdot s(bin(c),bin(c')) \\[2pt]
+%  & \displaystyle\sum_{c' \in C'_{gr}} h_A(c') \cdot s(bin(c),bin(c')) + \sum_{c' \in C' \setminus C'_{gr}} h_A(c') \cdot 0 \\[2pt]
+%  & \displaystyle\sum_{c' \in C'_{gr}} h_A(c') \cdot s(bin(c),bin(c')) %\\[2pt]
+% % 'hack' voor betere layout
+% \end{array}
+% $$
+% $$
+% \begin{array}{r@{\quad=\quad}l}
+%  & \displaystyle\sum_{c' \in C'_{gr}} \mathring{g}(bin(c')) \cdot \alpha^{|bin(c)-bin(c')|} \\[2pt]
+%  & \displaystyle\sum_{k=-R_1}^{R_1} \mathring{g}(bin(c)+k) \cdot \alpha^{|k|}
+% \end{array}
+% $$
+\begin{align*}
 \mathring{h}_A(c)
- & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p) \\[2pt]
- & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(A(p))) \\[2pt]
- & \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(c')) \\[2pt]
- & \displaystyle\sum_{c' \in C'} h_A(c') \cdot s(bin(c),bin(c')) \\[2pt]
- & \displaystyle\sum_{c' \in C'_{gr}} h_A(c') \cdot s(bin(c),bin(c')) + \sum_{c' \in C' \setminus C'_{gr}} h_A(c') \cdot 0 \\[2pt]
- & \displaystyle\sum_{c' \in C'_{gr}} h_A(c') \cdot s(bin(c),bin(c')) %\\[2pt]
-% 'hack' voor betere layout
-\end{array}
-$$
-$$
-\begin{array}{r@{\quad=\quad}l}
- & \displaystyle\sum_{c' \in C'_{gr}} \mathring{g}(bin(c')) \cdot \alpha^{|bin(c)-bin(c')|} \\[2pt]
- & \displaystyle\sum_{c' \in C'_{gr}} \mathring{g}(bin(c)+k) \cdot \alpha^{|k|}
-\end{array}
-$$
+ & = \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p) \\
+ & = \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(A(p))) \\
+ & = \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(c')) \displaybreak[0] \\
+ & = \displaystyle\sum_{c' \in C'} h_A(c') \cdot s(bin(c),bin(c')) \displaybreak[0] \\
+ & = \displaystyle\sum_{c' \in C'_{gr}} h_A(c') \cdot s(bin(c),bin(c')) + \sum_{c' \in C' \setminus C'_{gr}} h_A(c') \cdot 0 \displaybreak[0] \\
+ & = \displaystyle\sum_{c' \in C'_{gr}} h_A(c') \cdot s(bin(c),bin(c')) \displaybreak[0] \\
+ & = \displaystyle\sum_{c' \in C'_{gr}} \mathring{g}(bin(c')) \cdot \alpha^{|bin(c)-bin(c')|} \displaybreak[0] \\
+ & = \displaystyle\sum_{k=-R_1}^{R_1} \mathring{g}(bin(c)+k) \cdot \alpha^{|k|}
+\end{align*}
 De transformatie van het deelhistogram voor de grijstinten kan dus inderdaad beschouwd worden
 als een \'e\'endimensionaal lineair filter met filtermasker 
-$$
-m(k)= \left\{ 
-\begin{array}{ll} 
+\begin{displaymath}
+m(k)= \begin{cases}
 \alpha^{|k|} & \textrm{als } |k| \le R_1 \\ 
 0 & \textrm{anders} 
-\end{array} \right.
-$$
+\end{cases}
+\end{displaymath}
 voor alle $k \in \mathbb{N}$. Dit is de corresponderende matrix: 
 $
 \left[ \begin{array}{l@{\quad\ldots\quad}lllll@{\quad\ldots\quad}l} \alpha^{R_1} & \alpha^{2} & \alpha & 1 & \alpha & \alpha^{2} & \alpha^{R_1} \end{array} \right]
@@ -838,17 +852,17 @@ Het deelhistogram voor de kleurtinten wordt op een analoge manier gefilterd.
 De ``hue''-waarden van het HSV-model zijn echter circulair. Daarom gebruiken we in dit geval
 periodieke uitbreiding in plaats van uitbreiding met nullen. Meer formeel geldt voor 
 elke $c \in C' \setminus C'_{gr}$:
-$$
+\begin{displaymath}
 \mathring{h}_A(c) = \sum_{k=-R_2}^{R_2} \mathring{g}'(bin(c)+k) \cdot \beta^{|k|}
-$$
+\end{displaymath}
 waarbij
-$$
-\mathring{g}'(k) = \left\{ \begin{array}{ll}
+\begin{displaymath}
+\mathring{g}'(k) = \begin{cases}
 g'(17  + ((k-17) \bmod 240)) & \textrm{als } k > 16 \\
 g'(256 - ((16-k) \bmod 240)) & \textrm{anders}
-\end{array} \right.
-$$
-voor alle $k \in \mathbb{Z}$, met $g'$ de restrictie van $h_A \circ kleur$
+\end{cases}
+\end{displaymath}
+voor alle $k \in \mathbb{Z}$, met $g'$ de restrictie van $h_A \circ col$
 tot $\{17,18,\ldots,256\}$. Het is duidelijk dat $\mathring{g}'(k)=g'(k)$ voor alle 
 $k \in \{17,18,\ldots,256\}$. De functie $\mathring{g}'$ is dus inderdaad een uitbreiding
 van $g'$. Voor $\mathring{g}'(16)$, $\mathring{g}'(15)$, $\mathring{g}'(14)$, \ldots en
@@ -861,7 +875,7 @@ $\{17,18,\ldots,256\}$ herhaalt $\mathring{g}'$ zich dus periodiek.
 In figuur~\ref{fig:histogrammen_smoothed_sct} vergelijken we het gewone en het gladde pseudo-vage 
 SCT-histogram voor twee egaal groene beelden die perceptueel zeer similair zijn, maar waarbij 
 de beide kleuren toch in verschillende bins terecht komen. 
-Figuur~\ref{fig:uitgebreide_sct-histogrammen_smoothed} toont de gladde histogrammen 
+Figuur~\ref{fig:uitgebreide_sct-histogrammen_smoothed} toont de pseudo-vage gladde SCT-histogrammen 
 geassocieerd aan de beelden uit figuur~\ref{fig:uitgebreide_sct-histogrammen_beelden}.
 
 
@@ -878,8 +892,8 @@ geassocieerd aan de beelden uit figuur~\ref{fig:uitgebreide_sct-histogrammen_bee
 \includegraphics[height=2cm, width=6cm]{images/smoothed_sct_lichter_groen.eps}
 }
 \caption{\label{fig:histogrammen_smoothed_sct}Twee volledig groene beelden die perceptueel 
-nagenoeg gelijk zijn, samen met het geassocieerde SCT-histogram en de gladde versie van dat 
-histogram ($\alpha=1/3$, $R_1=6$, $\beta=2/3$ en $R_2=14$).}
+nagenoeg gelijk zijn, samen met het geassocieerde pseudo-vage SCT-histogram en de gladde 
+versie van dat histogram ($\alpha=1/3$, $R_1=6$, $\beta=2/3$ en $R_2=14$).}
 \end{center}
 \end{figure}
 
@@ -968,19 +982,28 @@ opzichte van elkaar, blijken hun gladde pseudo-vage SCT-histogrammen toch nog vr
 te zijn. De invloed van de achtergrondpixels is daar de oorzaak van. Als we veronderstellen dat
 de belangrijkste informatie zich steeds in het centrum van het beeld bevindt, dan kunnen we
 de invloed van minder belangrijke pixels beperken door het uitgebreid histogram te beschouwen waarbij
-$w_{A,c}=t \circ d_m$. In die gelijkheid is $d_m$ de functie die elk punt $p$ uit $P$ afbeeldt 
-op de Euclidische afstand tussen $p$ en het middelpunt van het beeld, en is
-$$
-t(x) = \left\{ \begin{array}{ll}
+$w_{A,c}(p)=\delta(bin(c)-bin(A(p))) \cdot t(d_m(p))$. In die gelijkheid is $d_m$ de functie die 
+elk punt $p$ uit $P$ afbeeldt op de Euclidische afstand tussen $p$ en het middelpunt van het beeld, 
+en is
+\begin{displaymath}
+t(x) = \begin{cases}
 1 & \textrm{als } x < \alpha \\
 1 - 2 \cdot \left( \frac{x-\alpha}{\gamma - \alpha} \right)^2 & \textrm{als } \alpha \le x < \beta \\[6pt]
 2 \cdot \left( \frac{x-\alpha}{\gamma - \alpha} \right)^2 & \textrm{als } \beta \le x < \gamma \\
 0 & \textrm{als } \gamma \le x
-\end{array} \right.
-$$
-voor alle $x$ uit $\mathbb{R}$, met $\alpha < \gamma$, $\beta=\frac{\alpha + \beta}{2}$. 
-Figuur~\ref{fig:kwadratische_interpolatie_grafiek} toont de grafiek van $l$. De uitgebreide
-histogrammen die we met $\alpha=\gamma / 10$, $\gamma = \min\{M/2, N/2\}$ bekomen voor de beelden 
+\end{cases}
+\end{displaymath}
+voor alle $x$ uit $\mathbb{R}$, met $\alpha < \gamma$ en $\beta=\frac{\alpha + \beta}{2}$. 
+Figuur~\ref{fig:kwadratische_interpolatie_grafiek} toont de grafiek van $t$. Bij
+die keuze voor $w_{A,c}$ kan de formule voor $\mathring{h}_A$ als volgt vereenvoudigd worden:
+\begin{align*}
+\mathring{h}_A(c)
+ & = \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot \delta (bin(c)-bin(A(p))) \cdot t(d_m(p)) \\
+ & = \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot \delta (bin(c)-bin(c')) \cdot t(d_m(p)) \\
+ & = \displaystyle \sum_{p \in P} \delta (bin(c)-bin(A(p))) \cdot t(d_m(p))
+\end{align*}
+voor alle $c \in C'$. De pseudo-vage uitgebreide
+histogrammen die we met $\alpha=\gamma / 10$ en $\gamma = \min\{M/2, N/2\}$ bekomen voor de beelden 
 van het geel bootje, worden weergegeven in
 figuur~\ref{fig:uitgebreide_sct-histogrammen_spatial}. We noemen dergelijke histogrammen
 \emph{spatiale histogrammen}.
@@ -1014,9 +1037,20 @@ $t \circ d_m$ oplevert voor een beeld van $M$ bij $N$ pixels, met
 \end{figure}
 
 We kunnen ook een histogram construeren dat zowel glad als spatiaal is. Dat doen we door
-$w_{A,c}(p)=s(bin(c),bin(A(c))) \cdot t(d_m(p))$, $\forall p \in P$, te kiezen. 
-Figuur~\ref{fig:uitgebreide_sct-histogrammen_smooted_en_spatial} toont de
-uitgebreide pseudo-vage SCT-histogrammen die we zo bekomen voor de beelden van het geel
+$w_{A,c}(p)=s(bin(c),bin(A(p))) \cdot t(d_m(p))$, $\forall p \in P$, te kiezen. 
+Vermits er voor elke $c \in C'$ dan geldt dat
+\begin{align*}
+\mathring{h}_A(c) 
+ &= \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot w_{A,c}(p) \displaybreak[0] \\
+ &= \displaystyle \sum_{c' \in C'} \sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot s(bin(c),bin(A(p))) \cdot t(d_m(p)) \displaybreak[0] \\
+ &= \displaystyle \sum_{c' \in C'} \mathring{h}'_A(c') \cdot s(bin(c),bin(A(p)))
+\end{align*}
+met $\mathring{h}'_A(c')=\sum_{p \in P} \delta (bin(c')-bin(A(p))) \cdot t(d_m(p))$, $\forall c' \in C'$, 
+kunnen we een glad spatiaal SCT-histogram $\mathring{h}_A$ in twee stappen construeren. Eerst
+genereren we het uitgebreid histogram $\mathring{h}'_A$, waarbij de invloed van een pixel 
+afhankelijk is van zijn spatiale locatie. Daarna maken we dat histogram glad door lineair te 
+filteren. Figuur~\ref{fig:uitgebreide_sct-histogrammen_smooted_en_spatial} toont de
+pseudo-vage uitgebreide SCT-histogrammen die we zo bekomen voor de beelden van het geel
 bootje. Die histogrammen zijn onderling duidelijk minder verschillend dan de oorspronkelijke
 pseudo-vage SCT-histogrammen. Similareitsmaten op basis van de gladde spatiale histogrammen
 zullen in dit geval dus grotere similariteiten teruggeven, wat beter in overeenstemming is met het 
@@ -1024,8 +1058,9 @@ waargenomen verschil tussen de beelden.
  
 Een spatiaal histogram, geassocieerd met een beeld $A$, kan ge\"interpreteerd worden als het 
 histogram voor een \emph{vaag gebied} in $A$. Als we een beeld $B$ construeren door de pixels
-van $A$ op een willekeurig te verplaatsen, dan zullen de spatiale histogrammen van $A$ en $B$
-meestal niet gelijk zijn. Door gebruik te maken van vage gebieden kunnen we het aantal mogelijke
+van $A$ willekeurig te verplaatsen, dan zullen de spatiale histogrammen van $A$ en $B$
+meestal niet gelijk zijn. De ``gewone'' histogrammen van $A$ en $B$ zijn dan uiteraard wel gelijk. 
+Door gebruik te maken van vage gebieden kunnen we het aantal mogelijke
 valse positieven dus beperken. Eventueel kunnen er per beeld ook meerdere vage gebieden beschouwd
 worden \cite{stricker:fuzzy_regions_for_image_indexing}.
  
@@ -1034,14 +1069,14 @@ worden \cite{stricker:fuzzy_regions_for_image_indexing}.
 Vooral belang hechten aan de pixels in de omgeving van de randen, is een alternatieve
 manier om de invloed van minder belangrijke pixels te beperken 
 \cite{vertan:upgrading_color_distribution_for_ir}. Dat kan door 
-$w_{A,c}=r_{A}$ te kiezen, met $r_{A}(p)$ de randsterkte op positie $p \in P$ in $A$.
+$w_{A,c}=\delta(bin(c)-bin(A(p))) \cdot r_{A}$ te kiezen, met $r_{A}(p)$ de randsterkte op positie $p \in P$ in $A$.
 Die randsterkte bepalen we op basis van de gradi\"ent, zoals uitgelegd in \ref{sectie:randdetectie}.  
 We noemen de histogrammen die we zo bekomen \emph{randhistogrammen}. 
 Figuur~\ref{fig:uitgebreide_sct-histogrammen_edgy} toont een aantal voorbeelden van
 pseudo-vage SCT-histogrammen die gebaseerd zijn op een randhistogram.
 
-De keuze $w_{A,c}(p)=s(bin(c),bin(A(c))) \cdot r(d_m(p))$, $\forall p \in P$, geeft
-aanleiding tot een een glad randhistogram. De gladde versies van de pseudo-vage
+Via de keuze $w_{A,c}(p)=s(bin(c),bin(A(c))) \cdot r(d_m(p))$, $\forall p \in P$, komen
+we tot een een glad randhistogram. De gladde versies van de pseudo-vage
 randhistogrammen uit figuur~\ref{fig:uitgebreide_sct-histogrammen_edgy}, worden
 weergegeven in figuur~\ref{fig:uitgebreide_sct-histogrammen_smooted_en_edgy}. 
 %In 
@@ -1050,8 +1085,8 @@ weergegeven in figuur~\ref{fig:uitgebreide_sct-histogrammen_smooted_en_edgy}.
 %maar ze lijken wel een stuk beter op elkaar dan de histogrammen uit 
 %figuur~\ref{fig:uitgebreide_sct-histogrammen_smoothed}. 
 Net zoals de gladde spatiale histogrammen, zullen de
-gladde randhistogrammen voor de beelden uit figuur~\ref{fig:uitgebreide_sct-histogrammen_beelden} 
-aanleiding geven tot similariteitsmaten die grotere similariteiten teruggeven.
+gladde randhistogrammen aanleiding geven tot grotere similariteiten
+voor de beelden uit figuur~\ref{fig:uitgebreide_sct-histogrammen_beelden}.
 In vergelijking met spatiale histogrammen hebben randhistogrammen echter het
 voordeel dat ze ook tot goede resultaten kunnen leiden als de belangrijkste inhoud niet
 in het centrum van het beeld gelocaliseerd is. Daartegenover staat dan natuurlijk wel
