--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -367,3 +367,23 @@ $
 
 
 \section{Aggregatieoperatoren} 
+
+Algemeen gesproken is een \emph{aggregatieoperator} een mathematisch object dat als doel heeft
+een verzameling getallen te reduceren tot \'e\'en representatief getal. In de context van 
+vaagverzamelingen wordt doorgaans de volgende definitie gebruikt 
+\cite{victor:aggregatieoperatoren}:
+\begin{definitie}
+Een aggregatieoperator $a$ is een stijgende continue $[0,1]^n - [0,1]$ afbeelding, 
+met $n \in \mathbb{N} \setminus \{0,1\}$, die voldoet aan de randvoorwaarden $a(0,0,\ldots,0)=0$ en 
+$a(1,1,\ldots,1)=1$.
+\end{definitie}
+\noindent
+Op basis van de manier waarop de aggregatie gebeurt, kunnen aggregatieoperatoren onderverdeeld
+worden in verschillende categorie\"en \cite{grabisch:fuzzy_aggregation_of_numerical_preferences}:
+conjuctieve, disjunctieve, compenserende, niet-compenserende en gewogen operatoren.
+
+In \cite{detyniecki:numerical_aggregation_operators} wordt er een overzicht gegeven van
+de bestaande aggregatieoperatoren. Het is niet moeilijk om in te zien dat elke continue 
+conjunctor of disjunctor aan de bovenstaande definitie voldoet. Voor $n > 2$ liggen het 
+rekenkundig en het gewogen gemiddelde het meest voor de hand. Ook het minimum en het maximum
+kunnen in dat geval als aggregatieoperator gebruikt worden.
