--- a/Thesis/kleurgeb.tex
+++ b/Thesis/kleurgeb.tex
@@ -279,7 +279,7 @@ histogrammen. Voor de parameter $\lambda$ van het vaaghistogram gebruiken we daa
 de waarde $5$.
 
 Figuur~\ref{fig:histgeb_gggrs_en_cputimes} toont de bekomen meetresultaten. Het Irb-histogram
-en het XYZ-histogram geven, in combinatie met $M_{13}$, de laagste GGGR-waarde. Hoewel die
+en het XYZ-histogram geven, in combinatie met $M_{I3}$, de laagste GGGR-waarde. Hoewel die
 waarde bij het Irb-histogram een fractie hoger is, merken we bij het vergelijken van 
 figuur~\ref{fig:results_irb_histgeb} en figuur~\ref{fig:results_xyz_histgeb} dat het 
 XYZ-histogram toch iets minder goede resultaten geeft. 
