--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -304,3 +304,19 @@
 	volume		= 10,
 	number		= 2,
 }
+
+@Inproceedings{detyniecki:numerical_aggregation_operators,
+	author		= {Detyniecki, M.},
+	title		= {Numerical Aggregation Operators: State of the Art},
+	year		= 2001,
+	booktitle	= {International Summer School on Aggregation Operators and their Applications},
+}
+
+@Incollection{grabisch:fuzzy_aggregation_of_numerical_preferences,
+	author		= {Grabisch, M. and Orlovski, S. A. and Yager, R. R.},
+	editor		= {Slowinski, R.}, 
+	booktitle	= {Fuzzy Sets in Decision Analysis},
+	title		= {Fuzzy aggregation of numerical preferences}, 
+	publisher	= {Kluwer Academic Publishers}, 
+	year		= 1998
+}
